# Harmony

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  encrypt.cpp  encrypt.h  event.cpp  event.h  harmony-ui.pro  main.cpp  main.h  metadata.cpp  metadata.h  run  setup.py  spread.cpp  spread.h  test.spread-conf  testa.c  testa.pyx
build-harmony-ui-Desktop-Debug/: Makefile  harmony-ui  moc_mainwindow.cpp  ui_mainwindow.h
harmony-ui/: about.ui  conversationinviteaccept.cpp  conversationinviteaccept.h  conversationinviteaccept.ui  createconveration.cpp  createconveration.h  createconveration.ui  harmony-ui.pro  leaveconfirmation.cpp  leaveconfirmation.h  leaveconfirmation.h.autosave  leaveconfirmation.ui  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  qt_data.h  qt_main.cpp  qt_main.h  sendinvite.cpp  sendinvite.h  sendinvite.ui
include/gcrypt/: gpgme.h
include/spread-src-4.4.0/daemon/: arch.h
include/spread-src-4.4.0/libspread-util/src/: arch.c  arch.h
include/spread-src-4.4.0/libspread-util/win32/: libspread-util.vcxproj  libspread-util.vcxproj.filters
include/spread-src-4.4.0/win32/: flush_user.vcxproj  flush_user.vcxproj.filters  libspread-core.vcxproj  libspread-core.vcxproj.filters  libspread.vcxproj.filters  spflooder.vcxproj  spflooder.vcxproj.filters  spread-service.vcxproj  spread.vcxproj  spread.vcxproj.filters  sprecv.vcxproj  sprecv.vcxproj.filters  sptmonitor.vcxproj  spuser.vcxproj  spuser.vcxproj.filters
include/spread-src-5.0.0/: Readme.IPv6  configure.in
include/spread-src-5.0.0/daemon/: acm.h  auth-pword-client.c  auth-pword-client.h  config_gram.l  configuration.h  flow_control.h  groups.c  ip_enum.c  lex.yy.c  log.c  membership.h  monitor.c  net_types.h  network.h  prot_objs.h  s.c  scatter.h  session.h  spread.c  status.c  winservice.c
include/spread-src-5.0.0/docs/: sample.spread.conf
include/spread-src-5.0.0/examples/: spping.c
include/spread-src-5.0.0/include/: fl.h
include/spread-src-5.0.0/java/spread/: AdvancedMessageListener.java  BasicMessageListener.java  SpreadAuthInterface.java  SpreadConnection.java
include/spread-src-5.0.0/libspread/: scatp.h  sp.c
include/spread-src-5.0.0/libspread-util/: configure
include/spread-src-5.0.0/libspread-util/docs/: license.txt
include/spread-src-5.0.0/libspread-util/include/: spu_addr.h  spu_data_link.h  spu_memory.h  spu_objects_local.h  spu_system_defs.h
include/spread-src-5.0.0/libspread-util/src/: Makefile.in  data_link.c  defines.h  events.c
include/spread-src-5.0.0/stdutil/: README  STDUTIL_LICENSE
include/spread-src-5.0.0/stdutil/src/: stdfd.c  stdit.c  stdtime.c
include/spread-src-5.0.0/stdutil/src/stdutil/: stdcarr.h  stddll.h  stderror.h  stdfd.h  stdhash.h  stdskl.h  stdutil.h
include/spread-src-5.0.0/stdutil/src/stdutil/private/: stdarch.h  stdarch_autoconf.h.in  stdarr_p.h  stdit_p.h  stdskl_p.h
include/spread-src-5.0.0/win32/: libspread.vcxproj  spread.sln  sptmonitor.vcxproj.filters
include/spread/spread-src-5.0.0/: Readme.txt  configure  release_announcement_5.0.txt
include/spread/spread-src-5.0.0/buildtools/: make_copyright.pl
include/spread/spread-src-5.0.0/daemon/: Changelog  Makefile.in  acconfig.h  acm.c  acp-permit.c  arch.h  auth-ip.c  auth-null.c  auth-pword.c  conf_body.h  config.h.in  config_parse.y  configuration.c  errors.h  flow_control.c  groups.h  ip_enum.h  log.h  membership.c  message.c  message.h  mutex.h  network.c  prot_body.h  protocol.c  protocol.h  r.c  sess_body.h  sess_types.h  session.c  spread_params.h  status.h  y.tab.c  y.tab.h
include/spread/spread-src-5.0.0/examples/: Makefile.in
include/spread/spread-src-5.0.0/include/: sp.h  sp_func.h
include/spread/spread-src-5.0.0/java/: Flooder.java  User.java  readme.txt  recThread.java
include/spread/spread-src-5.0.0/java/spread/: GroupID.java  MembershipInfo.java  MessageFactory.java  NULLAuth.java  SpreadException.java  SpreadGroup.java  SpreadMessage.java  SpreadVersion.java
include/spread/spread-src-5.0.0/libspread/: fl.c  fl_p.h  scatp.c
include/spread/spread-src-5.0.0/libspread-util/: Changelog  configure.in
include/spread/spread-src-5.0.0/libspread-util/buildtools/: fixpaths
include/spread/spread-src-5.0.0/libspread-util/docs/: Readme.txt
include/spread/spread-src-5.0.0/libspread-util/include/: spu_alarm.h  spu_alarm_types.h  spu_events.h  spu_objects.h  spu_scatter.h  spu_system.h.win32  spu_system_defs_autoconf.h  spu_system_defs_windows.h
include/spread/spread-src-5.0.0/libspread-util/src/: alarm.c  arch.c  arch.h  config.h.in  memory.c  spu_addr.c
include/spread/spread-src-5.0.0/libspread-util/win32/: libspread-util.sln
include/spread/spread-src-5.0.0/stdutil/: CHANGELOG  Makefile  configure
include/spread/spread-src-5.0.0/stdutil/src/: stdarr.c  stdcarr.c  stdhash.c  stdskl.c  stdthread.c  stdutil.c
include/spread/spread-src-5.0.0/stdutil/src/stdutil/: stdarr.h  stddefines.h  stdit.h  stdthread.h  stdtime.h
include/spread/spread-src-5.0.0/stdutil/src/stdutil/private/: stdarch_wintel32.h  stdcarr_p.h  stddll_p.h  stdhash_p.h  stdthread_p.h
include/spread/spread-src-5.0.0/win32/: spread-service.vcxproj.filters  spsend.vcxproj  spsend.vcxproj.filters
lib/: ._libspread-core.lib  ._libspread.lib  libgcrypt.lib  libspread-core.lib  libspread.lib
